287858  VG_(strerror): unknown error 
289699  vgdb connection in relay mode erroneously closed due to buffer overrun 
289939  wish: complete monitor cmd 'leak_check' with details about leaked or reachable blocks
290655  Add support for AESKEYGENASSIST instruction 
290974  vgdb must align pages to VKI_SHMLBA (16KB) on ARM 
293088  Add some VEX sanity checks for ppc64 unhandled instructions
294055  regtest none/tests/shell fails when locale is not set to C
294190  --vgdb-error=xxx can be out of sync with errors shown to the user
295799  Missing \n with get_vbits in gdbserver when line is % 80 and there are some unaddressable bytes 
296983  Fix build issues on x86_64/ppc64 without 32-bit toolchains
n-i-bz  s390x: Shadow registers can now be examined using vgdb
297078  gdbserver signal handling problems caused by diff vki nr/gdb nr
        and non reset of "C-ontinued" signal
297991  Valgrind interferes with mmap()+ftell() 
297992  Support systems missing WIFCONTINUED (e.g. pre-2.6.10 Linux) 
297993  Fix compilation of valgrind with gcc -g3.
298394  s390x: Don't bail out on an unknown machine model. Assume it's a new model.
298943  massif asserts with --pages-as-heap=yes when brk is changing by value different of page size
299756  For symmetry, --free-fill must be ignored for MEMPOOL_FREE and FREELIKE client requests
n-i-bz  Bypass gcc4.4/4.5 wrong code generation causing out of memory or asserts
n-i-bz  Add missing gdbserver xml files for shadow registers for ppc32
n-i-bz  Fix false positive in sys_clone on amd64 when optional args are not given (e.g. child_tidptr)

Release 3.7.0 (5 November 2011)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3.7.0 is a feature release with many significant improvements and the
usual collection of bug fixes.

This release supports X86/Linux, AMD64/Linux, ARM/Linux, PPC32/Linux,
PPC64/Linux, S390X/Linux, ARM/Android, X86/Darwin and AMD64/Darwin.
Support for recent distros and toolchain components (glibc 2.14, gcc
4.6, MacOSX 10.7) has been added.
